# project-gravity

./: .gitignore  .gitmodules  LICENSE  README.md
Conv/: description.md  test_conv.py  test_conv2d.py  test_conv3d.py
HelloWorld/: description.md
HelloWorld/cpp/: CMakeLists.txt
HelloWorld/cpp/src/: hello_world_cpu.cc
HelloWorld/cuda/: CMakeLists.txt
HelloWorld/cuda/src/: hello_world_cuda.cu
HelloWorld/cuda_pybind/: CMakeLists.txt  cudaHelloWorld.ncu-rep  cudaHelloWorld.nsys-rep  hello_world_cuda.py
HelloWorld/cuda_pybind/src/: hello_world_cuda.cu  hello_world_cuda.h  hello_world_cuda_pybind.cc
HelloWorld/pybind/: CMakeLists.txt  hello_world.py
HelloWorld/pybind/src/: hello_world_cpu.cc
LDS_STS/: description.md
MatMul/: CMakeLists.txt  description.md  matmul_simt.ncu-rep  matmul_tensorcore_v0.1.ncu-rep  nsys_matmul_all.nsys-rep  nsys_matmul_all_v0.1.nsys-rep  test_matrix_mul.py
MatMul/include/: matrix_mul.cuh  matrix_mul.h
MatMul/src/: common.cu  matrix_mul.cc  matrix_mul.cu  matrix_mul_cpasync.cu  matrix_mul_half.cu  matrix_mul_naive.cu  matrix_mul_simt.cu  matrix_mul_simt_pipeline.cu  matrix_mul_tensorcore.cu
MatTranspose/: CMakeLists.txt  description.md  mat_transpose_all.ncu-rep  nsys_mat_transpose_all.nsys-rep  test_mat_trans.py
MatTranspose/include/: cuda_utils.h  mat_trans.cuh
MatTranspose/src/: common.cu  mat_trans.cc  mat_trans_naive.cu  mat_trans_shared.cu
ReduceSum/: CMakeLists.txt  description.md  nsys_global_sum_all.nsys-rep  test_global_sum.py
ReduceSum/include/: global_sum.cuh
ReduceSum/src/: global_sum.cc  global_sum_atomAdd.cu  global_sum_reduce.cu  global_sum_reduce_async.cu
